lession-2: add mem.c impl and gtest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,26 @@
 cmake_minimum_required(VERSION 3.20)
-project(chip8 C)
+project(chip8 C CXX)
+
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-file(GLOB CHIP8_SOURCES CONFIGURE_DEPENDS "${CMAKE_SOURCE_DIR}/src/*.c")
-add_executable(chip8 ${CHIP8_SOURCES})
-target_include_directories(chip8 PRIVATE "${CMAKE_SOURCE_DIR}/include")
+# -----------------------------
+# Core library: exclude main.c to allow unit testing independently
+# -----------------------------
+file(GLOB CHIP8_ALL_C CONFIGURE_DEPENDS "${CMAKE_SOURCE_DIR}/src/*.c")
+list(FILTER CHIP8_ALL_C EXCLUDE REGEX ".*/main\\.c$")
+add_library(chip8_core ${CHIP8_ALL_C})
+target_include_directories(chip8_core PUBLIC "${CMAKE_SOURCE_DIR}/include")
 
-find_package(SDL3 CONFIG REQUIRED)      # 由 SDL3_DIR 指向的包提供
-target_link_libraries(chip8 PRIVATE SDL3::SDL3)
+# -----------------------------
+# Executable: entry point only, links to core library + SDL3
+# -----------------------------
+add_executable(chip8 src/main.c)
+target_include_directories(chip8 PRIVATE "${CMAKE_SOURCE_DIR}/include")
+find_package(SDL3 CONFIG REQUIRED)
+target_link_libraries(chip8 PRIVATE chip8_core SDL3::SDL3)
 
 if (WIN32)
   add_custom_command(TARGET chip8 POST_BUILD
@@ -19,3 +30,21 @@ if (WIN32)
 endif()
 
 install(TARGETS chip8 RUNTIME DESTINATION bin)
+
+# -----------------------------
+# Tests: GoogleTest + CTest
+# -----------------------------
+include(CTest)           # Enable BUILD_TESTING option (default ON)
+if (BUILD_TESTING)
+  # Option: use local googletest source
+  # The root path should contain the googletest/ subdir and top-level CMakeLists.txt
+  set(GTEST_SRC_ROOT "C:/Libraries/googletest-1.17.0" CACHE PATH "Path to googletest source root")
+  add_subdirectory("${GTEST_SRC_ROOT}" "${CMAKE_BINARY_DIR}/_gtest")   # Generates gtest / gtest_main targets
+
+  add_executable(test_mem tests/test_mem.cpp)
+  target_include_directories(test_mem PRIVATE "${CMAKE_SOURCE_DIR}/include")
+  target_link_libraries(test_mem PRIVATE chip8_core gtest gtest_main)
+
+  include(GoogleTest)
+  gtest_discover_tests(test_mem)   # Automatically register TEST() cases into CTest
+endif()
